- Release Commit: - Renamed TreeNode -> BSTNode - Free functions for BST and Vector were added - Now you are able to enter how many mostly used words do you want to print (howMany) - Some cleaning stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(words_lab C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(words_lab main.c Word.h BinaryTree.h BinaryTree.c Word.c vector.h vector.c Data.h Data.c)
+add_executable(words_lab main.c Word.h BinaryTree.h BinaryTree.c Word.c Vector.h Vector.c Data.h Data.c)
